--- a/src/components/AnimatedLetters/index.scss
+++ b/src/components/AnimatedLetters/index.scss
@@ -13,7 +13,7 @@
   
     &:hover {
       animation: rubberBand 1s;
-      color: #eb65e4;
+      color: #eb6584;
   }
 }
   @for $i from 1 through 35 {
