--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -38,7 +38,8 @@
     animation-delay:1.3s ;
 
 }
-.about-page{
+.about-page,
+.contact-page {
     .text-zone{
         position:absolute;
         left:10%;
